Quisk Version 4.1.56  April 2020
================================
For Linux, if the file /usr/include/portaudio.h is absent, portaudio will not be included in Quisk.
This change makes portaudio optional. The change was needed because portaudio breaks wine. Quisk now
restores the correct frequency for the 60 meter band. There were some other bug fixes.

Quisk Version 4.1.55  April 2020
================================
The new Sdr Micron radio was missing from the Windows version of Quisk. There are reports that the item
Hermes_BandDictTx is damaged in the quisk_settings.json file. Quisk will now fix this itself. The item is
the "Tx IO Bus" on the Hermes Bands configuration screen.

Quisk Version 4.1.54  March 2020
================================
There are now two new radios available in Quisk. David Fainitski contributed code for the Sdr Micron,
and Andrea Montefusco IW0HDV contributed code for the Perseus SDR. The radios should appear on the
list of supported radios in Config/Radios screen. Check the Config/radio/Hardware screen to see if you
need any more options. Please test these radios to make sure everything is working.

I added a general way to add new radios to the configuration screens. See docs.html under Custom Hardware.

Quisk Version 4.1.53  March 2020
================================
I changed the Afedri radio module to be compatible with Python3. The graph Zoom feature now is available
on the Bandscope screen. Vladimyr Burdeiny provided a patch to make dx cluster work with Python 3.

I extended the range of the Waterfall color controls Ys and Yz to accommodate hardware with a higher
noise floor such as PlutoSDR. You will have to readjust your waterfall colors.

I added a hardware setting for the LNA gain during transmit for the HL2. I made some changes to the CW
and PTT hardware interface for the HL2. These work great with the HL2, but test the new code if you have
different Hermes hardware such as Red Pitaya.

Quisk Version 4.1.52  December 2019