@@ -1,6 +1,6 @@
 Metadata-Version: 1.1
 Name: quisk
-Version: 4.1.56
+Version: 4.1.57
 Summary: QUISK is a Software Defined Radio (SDR) transceiver that can control various radio hardware.
 Home-page: http://james.ahlstrom.name/quisk/
 Author: James C. Ahlstrom
