@@ -1,3 +1,9 @@
+Quisk Version 4.1.57  May 2020
+==============================
+This is a bug fix release. I fixed a bug in the small screen version. I fixed an incompatibility
+with the latest wxPython version 4.1.0. I added a patch from Dave Roberts to close FreeDV properly.
+Thanks Dave!
+
 Quisk Version 4.1.56  April 2020
 ================================
 For Linux, if the file /usr/include/portaudio.h is absent, portaudio will not be included in Quisk.
